syntax = "proto3";

option csharp_namespace = "GrpcService2";

package Subtract;

service Subtract {
  rpc Subtract (CalculationRequest) returns (CalculationResponse);
}

message CalculationRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message CalculationResponse {
  int32 result = 1;
}
